--- a/java/pom.xml
+++ b/java/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.johnlinp</groupId>
   <artifactId>instagram-validator</artifactId>
   <packaging>jar</packaging>
-  <version>0.1-SNAPSHOT</version>
+  <version>0.1</version>
   <name>instagram-validator</name>
   <description>Non-official Instagram validator</description>
   <url>https://github.com/johnlinp/instagram-validator</url>
@@ -19,6 +18,7 @@
 
   <scm>
     <connection>scm:git:https://github.com/johnlinp/instagram-validator.git</connection>
+    <tag>java-instagram-validator-0.1</tag>
   </scm>
 
   <distributionManagement>
