[maven-release-plugin] prepare for next development iteration

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -3,7 +3,7 @@
   <groupId>io.github.johnlinp</groupId>
   <artifactId>instagram-validator</artifactId>
   <packaging>jar</packaging>
-  <version>0.1</version>
+  <version>0.2-SNAPSHOT</version>
   <name>instagram-validator</name>
   <description>Non-official Instagram validator</description>
   <url>https://github.com/johnlinp/instagram-validator</url>
@@ -18,7 +18,7 @@
 
   <scm>
     <connection>scm:git:https://github.com/johnlinp/instagram-validator.git</connection>
-    <tag>java-instagram-validator-0.1</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <distributionManagement>
